--- a/src/main/resources/pck/enote/viewNotes.fxml
+++ b/src/main/resources/pck/enote/viewNotes.fxml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-
+<?import javafx.scene.text.*?>
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="pck.enote.controller.ViewNotesController">
     <children>
@@ -23,7 +17,7 @@
                     </font>
                 </Label>
                 <TextField fx:id="tfUsername" disable="true" editable="false" layoutX="90.0" layoutY="10.0"
-                           prefHeight="30.0" prefWidth="300.0" text="phat1">
+                           prefHeight="30.0" prefWidth="300.0" text="username">
                     <font>
                         <Font size="14.0"/>
                     </font>
@@ -34,7 +28,7 @@
                     </font>
                 </Label>
                 <TextField fx:id="tfNumberNote" disable="true" editable="false" layoutX="90.0" layoutY="50.0"
-                           prefHeight="30.0" prefWidth="300.0" text="100">
+                           prefHeight="30.0" prefWidth="300.0" text="&lt;number notes&gt;">
                     <font>
                         <Font size="14.0"/>
                     </font>
@@ -63,30 +57,42 @@
                     </font>
                 </Label>
                 <TextField fx:id="tfPort" disable="true" editable="false" layoutX="90.0" layoutY="50.0"
-                           prefHeight="30.0" prefWidth="150.0" text="9999">
+                           prefHeight="30.0" prefWidth="100.0" text="9999">
                     <font>
                         <Font size="14.0"/>
                     </font>
                 </TextField>
-                <Hyperlink fx:id="hlEditSever" layoutX="250.0" layoutY="50.0" onAction="#editConnection"
+                <Hyperlink fx:id="hlEditSever" layoutX="200.0" layoutY="50.0" onAction="#editConnection"
                            prefHeight="30.0" text="Tùy chỉnh kết nối"/>
             </children>
         </Pane>
-        <Pane layoutX="586.0" layoutY="100.0" prefHeight="40.0" prefWidth="200.0">
-            <children>
-                <Label layoutX="52.0" prefHeight="40.0" text="Tải ghi chú lên">
-                    <font>
-                        <Font name="System Bold" size="14.0"/>
-                    </font>
-                </Label>
-                <Button fx:id="btnUpload" onAction="#choseFileAndUpload" layoutX="158.0" mnemonicParsing="false"
-                        prefHeight="40.0" prefWidth="40.0">
-                    <graphic>
-                        <ImageView fx:id="ivPlusIcon" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true"
-                                   preserveRatio="true"/>
-                    </graphic>
-                </Button>
-            </children>
+        <Pane layoutX="486.0" layoutY="100.0" prefHeight="40.0" prefWidth="300.0">
+            <Label layoutX="52.0" prefHeight="40.0" text="Tải ghi chú lên">
+                <font>
+                    <Font name="System Bold" size="14.0"/>
+                </font>
+            </Label>
+            <Button fx:id="btnUploadText" layoutX="158.0" mnemonicParsing="false" onAction="#inputTextAndUpload"
+                    prefHeight="40.0" prefWidth="40.0">
+                <graphic>
+                    <ImageView fx:id="ivAddTextIcon" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true"
+                               preserveRatio="true"/>
+                </graphic>
+            </Button>
+            <Button fx:id="btnUploadImage" layoutX="208.0" mnemonicParsing="false" onAction="#choseImageAndUpload"
+                    prefHeight="40.0" prefWidth="40.0">
+                <graphic>
+                    <ImageView fx:id="ivAddImageIcon" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true"
+                               preserveRatio="true"/>
+                </graphic>
+            </Button>
+            <Button fx:id="btnUploadFile" layoutX="258.0" mnemonicParsing="false" onAction="#choseFileAndUpload"
+                    prefHeight="40.0" prefWidth="40.0">
+                <graphic>
+                    <ImageView fx:id="ivAddFileIcon" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true"
+                               preserveRatio="true"/>
+                </graphic>
+            </Button>
         </Pane>
         <TableView fx:id="tableView" layoutY="149.0" prefHeight="450.0" prefWidth="800.0">
             <columns>
